[package]
name = "Rust_Vulkan_Tutorial"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.33.2+1.2.186"
glfw = {version = "0.41.0", features = ["vulkan"]}
winapi = "0.3.9"
memoffset = "0.6.4"
cgmath = "0.18.0"